--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,5 +1,7 @@
 <!-- -- Header.html -- -->
-<header id="header_area">
+
+<!-- Default -->
+<header>
     <ul>
         <!-- class="selected" -->
         <a id="header_home_link"
@@ -8,18 +10,21 @@
                 <img alt="Home"/>
             </li>
         </a>
+
         <a id="header_articles_link"
            href="./Articles.php">
             <li>
                 Artikler
             </li>
         </a>
+        
         <a id="header_insight_link"
            href="./Insight.php">
             <li>
                 Insight
             </li>
         </a>
+
         <a id="header_profile_link"
            href="./Account.php">
             <li>
@@ -28,3 +33,4 @@
         </a>
     </ul>
 </header>
+
