--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,31 +1,31 @@
 <!-- -- Header.html -- -->
 
 <!-- Default -->
-<header>
+<header class="page_header_area">
     <ul>
         <!-- class="selected" -->
-        <a id="header_home_link"
+        <a class="header_home_link"
            href="./index.php">
             <li>
                 <img alt="Home"/>
             </li>
         </a>
 
-        <a id="header_articles_link"
+        <a class="header_articles_link"
            href="./Articles.php">
             <li>
                 Artikler
             </li>
         </a>
         
-        <a id="header_insight_link"
+        <a class="header_insight_link"
            href="./Insight.php">
             <li>
                 Insight
             </li>
         </a>
 
-        <a id="header_profile_link"
+        <a class="header_profile_link"
            href="./Account.php">
             <li>
                 Profil
