--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -35,7 +35,7 @@
 </header>
 
 <!-- Navigation -->
-<header class="page_header_area">
+<header class="page_navigation_area">
         <ul>
             <!-- class="selected" -->
             <a class="header_home_link"
