--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -41,7 +41,7 @@
             <a class="header_home_link"
                href="./index.php">
                 <li>
-                    <img alt="Home"/>
+                Home
                 </li>
             </a>
     
