--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -11,7 +11,7 @@
             </li>
         </a>
 
-        <a class="header_articles_link"
+        <a class="header_articles_link selected_page"
            href="./Articles.php">
             <li>
                 Artikler
