--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,6 +1,6 @@
 <!-- -- Header.html -- -->
 
-<!-- Default -->
+<!-- Default dashboard -->
 <header class="page_header_area hide_on_mobile">
     <ul>
         <!-- class="selected" -->
@@ -33,6 +33,36 @@
 
 <!-- Navigation, for desktop -->
 <header class="page_navigation_area hide_on_mobile">
+        <ul>
+            <!-- class="selected" -->
+            <a class="header_home_link"
+               href="./index.php">
+                <li>
+                    Home
+                </li>
+            </a>
+            <a class="header_articles_link"
+               href="./Articles.php">
+                <li>
+                    Artikler
+                </li>
+            </a>
+            <a class="header_insight_link"
+               href="./Insight.php">
+                <li>
+                    Insight
+                </li>
+            </a>
+            <a class="header_profile_link"
+               href="./Account.php">
+                <li>
+                    Profil
+                </li>
+            </a>
+        </ul>
+</header>
+
+<header class="mobile_page_navigation_area show_on_mobile">
         <ul>
             <!-- class="selected" -->
             <a class="header_home_link"
