--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -63,7 +63,7 @@
 </header>
 
 <!--  -->
-<header class="mobile_page_navigation_area show_on_mobile">
+<header class="mobile_page_navigation_area hide_on_desktop">
         <ul>
             <!-- class="selected" -->
             <a class="header_home_link"
