--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -32,7 +32,7 @@
 </header>
 
 <!-- Navigation, for desktop -->
-<header class="page_navigation_area hide_on_mobile">
+<header class="page_navigation_area hide_on_mobile overlay">
         <ul>
             <!-- class="selected" -->
             <a class="header_home_link"
