--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,7 +1,7 @@
 <!-- -- Header.html -- -->
 
 <!-- Default dashboard -->
-<header class="page_header_area hide_on_mobile">
+<header class="page_header_area overlay hide_on_mobile">
     <ul>
         <!-- class="selected" -->
         <a class="header_home_link"
@@ -32,7 +32,7 @@
 </header>
 
 <!-- Navigation, for desktop -->
-<header class="page_navigation_area hide_on_mobile overlay">
+<header class="page_navigation_area hide_on_mobile">
         <ul>
             <!-- class="selected" -->
             <a class="header_home_link"
