--- a/sites/content/Articles.html
+++ b/sites/content/Articles.html
@@ -2,3 +2,19 @@
 <h1>
     Articles
 </h1>
+
+<div class="news-container-front">
+    <div class="news-container-area">
+
+    </div>
+    <div class="news-container-area">
+
+    </div>
+    <div class="news-container-area">
+
+    </div>
+</div>
+
+<div class="news-container-">
+
+</div>
