--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -92,3 +92,12 @@
             </a>
         </ul>
 </header>
+
+<div class="hide_on_desktop">
+    <div class="menu_button">
+        <div class="menu_button_icon">
+                <i class="fas fa-bars">
+                </i>
+        </div>
+    </div>
+</div>
