--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -94,7 +94,7 @@
 </header>
 
 <div class="hide_on_desktop">
-    <div class="menu_button">
+    <div class="menu_button" style="cursor:pointer;">
         <div class="menu_button_icon">
                 <i class="fas fa-bars">
                 </i>
