--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -11,7 +11,7 @@
     <div class="container-area-3">
         <div class="container-area">
             <!--  -->
-            <div class="container-short-description">
+            <div class="container-short-description double-container">
                 <i class="fab fa-leanpub">
                 </i>
                 <p>
