--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -11,7 +11,7 @@
     <div class="container-area-3">
         <div class="container-area">
             <!--  -->
-            <div class="container-short-description double-container">
+            <div class="container-short-description">
                 <i class="fab fa-leanpub">
                 </i>
                 <p>
@@ -29,7 +29,7 @@
                 </p>
             </div>
         </div>
-        <div class="container-area">
+        <div class="container-area double-container">
             <!--  -->
             <div class="container-short-description">
                 <i class="fas fa-stopwatch">
